align fix

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,19 +2,18 @@ html {
     background-color: black;
 }
 
-body {
-    align-content: center;
-}
 h1 {
     color: white;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: 300;
-    font-size: 42px;  
+    font-size: 42px; 
+    text-align: center; 
 }
 
 p {
     color: aquamarine;
     font-size: 16px;
+    text-align: center;
 }
 
 .heading {
